--- a/styles/main.css
+++ b/styles/main.css
@@ -62,6 +62,11 @@ img {
 .button__luxury {
   color: #004444; }
 
+.button:hover {
+  color: white;
+  background: none;
+  border: 2px solid white; }
+
 @media (min-width: 360px) {
   .section__conteiner {
     max-width: 330px; } }
